--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
         <script src="js/setup.js"></script>
 
         <!-- Service -->
+
+        <script src="service/artist-invoice.js"></script>
         <script src="service/analytics.js"></script>
         <script src="service/contact.js"></script>
-        <script src="service/artist-invoice.js"></script>
         <script src="service/cache.js"></script>
         <script src="service/locale.js"></script>
         <script src="service/rssFeed.js"></script>
         <script src="service/utils.js"></script>
 
         <!-- Directive JS -->
+        <script src="directive/artist-api.js"></script>
         <script src="directive/artist-lookup/artist-lookup.js"></script>
         <script src="directive/artist-content/artist-content.js"></script>
         <script src="directive/footer/home-footer.js"></script>
