Updated the title of the project.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Dr.Vamp Audio</title>
+    	<title>Dr.Vamp Dktrvamp Musicians News and Information Audio Producers Technology World Wide Studio Gear Synthesizers</title>
         <!-- <base href="/"> -->
-        <base url="http://www.drvaudio.com">
+        <!-- <base url="http://www.drvaudio.com"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
 
