Updated meta tag and Title tag in the head html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Dr.Vamp Dktrvamp Musicians News and Information Audio Producers Technology World Wide Studio Gear Synthesizers</title>
+    	<title>Dr.Vamp Music</title>
         <!-- <base href="/"> -->
         <!-- <base url="http://www.drvaudio.com"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Music Info by Dktrvamp aka Dr.Vamp: - Musicians News and Information - Audio - Producers - Technology - World Wide - Studio Gear -
+         Recommendations"/>
         <meta charset="utf-8">
 
         <!-- App LESS -->
