--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <!-- <base href="/"> -->
         <!-- <base url="http://www.drvaudio.com"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
         <meta name="description" content="Music Info by Dktrvamp aka Dr.Vamp: - Musicians News and Information - Audio - Producers - Technology - World Wide - Studio Gear -
          Recommendations"/>
-        <meta charset="utf-8">
+        <meta name="Keywords" content="music, producers, producer, technology, musicians, synth, synthersizer, studio, instrumentals, instruments, songwriting, news, studio gear, sound engineer, music production, music marketing, music matters, electronic music, PLUR, trance, dance, house music, hip hop, rap, trap">
+        <meta name="author" content="John Oprisor">
 
         <!-- App LESS -->
         <link href="css/app.less" type="text/css" rel="stylesheet/less">
