Updated the meta tags with more information.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <!-- <base url="http://www.drvaudio.com"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
-        <meta name="description" content="Music Info by Dktrvamp aka Dr.Vamp: - Musicians News and Information - Audio - Producers - Technology - World Wide - Studio Gear -
+        <meta name="description" content="Music Music Production Information by Dr.Vamp: - Musicians News - Information - Audio - Producers - Technology - World Wide - Studio Gear -
          Recommendations"/>
-        <meta name="Keywords" content="music, producers, producer, technology, musicians, synth, synthersizer, studio, instrumentals, instruments, songwriting, news, studio gear, sound engineer, music production, music marketing, music matters, electronic music, PLUR, trance, dance, house music, hip hop, rap, trap">
+        <meta name="Keywords" content="music, producers, producer, technology, musicians, synth, synthersizer, studio, instrumentals, instruments, news, studio gear, sound engineer, music production, music marketing, music matters, dktrvamp, drvamp, dr.vamp, dr.vamp audio, John Oprisor, dirty south, romania, romanian producer">
         <meta name="author" content="John Oprisor">
 
         <!-- App LESS -->
