Updated the meta tags for keywords and project name.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Dr.Vamp Music</title>
+    	<title>Dr.Vamp Audio Engineering</title>
         <!-- <base href="/"> -->
         <!-- <base url="http://www.drvaudio.com"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <meta name="description" content="Music Music Production Information by Dr.Vamp: - Musicians News - Information - Audio - Producers - Technology - World Wide - Studio Gear -
          Recommendations"/>
-        <meta name="Keywords" content="music, producers, producer, technology, musicians, synth, synthersizer, studio, instrumentals, instruments, news, studio gear, sound engineer, music production, music marketing, music matters, dktrvamp, drvamp, dr.vamp, dr.vamp audio, John Oprisor, dirty south, romania, romanian producer">
+        <meta name="Keywords" content="Audio Engineering, John Oprisor, romanian producer, music producer news, sling tv">
         <meta name="author" content="John Oprisor">
 
         <!-- App LESS -->
