--- a/directive/playlist/playlist.html
+++ b/directive/playlist/playlist.html
@@ -1,6 +1,11 @@
 <div id="table-list">
     <div id="mp3_player">
-        <div id="audio_box"></div>
+        <div id="audio_box">
+            <audio id="audioplayer" data-ng-src="{{model.source}}" autoplay controls loop>
+                <!-- <source type="audio/x-wav" data-ng-if="model.source" data-ng-src="{{model.source}}"> -->
+                Your browser does not support the audio tag.
+            </audio>
+        </div>
         <canvas class="canvas" id="analyser_render"></canvas>
     </div>
     <div class="table-list" ng-init="show = true" data-ng-show="show">
@@ -8,14 +13,14 @@
             <li data-ng-class="{ 'active' : is_clicked } " data-ng-click="is_clicked = !is_clicked">
                 <i class="fa fa-music"></i>
                 <a class="track-name"
-                    data-ng-click="onPlayClicked($index)">{{track.name}}
+                    data-ng-click="onPlayClicked($event, $index)">{{track.name}}
                 </a>
                 <i class="play-controls fa fa-pause"
                     data-ng-click="onPauseClicked($index)">
                 </i>
                 <i class="play-controls fa
                         fa-play-circle-o"
-                    data-ng-click="onPlayClicked($index)">
+                    data-ng-click="onPlayClicked($event, $index)">
                 </i>
                 <!-- <i class="play-controls fa fa-cart-plus"></i> -->
             </li>
