--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <script src="directive/ng-click.js"></script>
         <script src="directive/twitter/twitter-feed.js"></script>
         <script src="directive/soundcloud/soundcloud-new-track.js"></script>
+        <script src="directive/visual-animation/wave.js"></script>
 
         <!-- Modals -->
         <script src="modals/gear.js"></script>
