updated the playlist.

--- a/directive/playlist/playlist.html
+++ b/directive/playlist/playlist.html
@@ -1,7 +1,7 @@
 <div id="table-list">
     <div id="mp3_player">
         <div id="audio_box">
-            <audio id="audioplayer" data-ng-src="{{model.source}}" autoplay controls loop>
+            <audio id="audioplayer" data-ng-src="{{model.source}}" controls loop>
                 <!-- <source type="audio/x-wav" data-ng-if="model.source" data-ng-src="{{model.source}}"> -->
                 Your browser does not support the audio tag.
             </audio>
