Made additional important changes and improvements.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
         <!-- Animations -->
         <script src="animations/animations.js"></script>
 
+        <!-- Filters -->
+        <script src="filter/trust-url.js"></script>
+
         <!-- Analytics -->
         <script src="libs/desktop-view-switch.js"></script>
         <script src="libs/facebook.js"></script>
