--- a/directive/playlist/playlist.html
+++ b/directive/playlist/playlist.html
@@ -1,28 +1,25 @@
 <div id="table-list">
     <div id="mp3_player">
         <div id="audio_box">
-            <audio id="audioplayer" data-ng-src="{{model.source}}" controls loop>
-                <!-- <source type="audio/x-wav" data-ng-if="model.source" data-ng-src="{{model.source}}"> -->
+            <audio id="audioplayer" data-ng-src="{{model.source | trusted}}" controls loop>
                 Your browser does not support the audio tag.
             </audio>
         </div>
         <canvas class="canvas" id="analyser_render"></canvas>
     </div>
     <div class="table-list" ng-init="show = true" data-ng-show="show">
-        <ul class="playlist" data-ng-repeat="track in tracks">
-            <li data-ng-class="{ 'active' : is_clicked } " data-ng-click="is_clicked = !is_clicked">
-                <i class="fa fa-music"></i>
+        <ul class="playlist">
+            <li data-ng-repeat="track in tracks"
+                data-ng-class="{ 'active' : model.playing_item.index === $index } ">
+                <i class="play-controls fa"
+                    data-ng-class="model.playing_item.index === $index ? 'fa-pause' : 'fa-play-circle-o' "
+                    data-ng-click="onPlayToggle($event, $index)">
+                </i>
+                <img data-ng-src="{{track.waveform}}" data-ng-if="track.waveform">
+
                 <a class="track-name"
-                    data-ng-click="onPlayClicked($event, $index)">{{track.name}}
+                    data-ng-click="onPlayToggle($event, $index)">{{track.name}}
                 </a>
-                <i class="play-controls fa fa-pause"
-                    data-ng-click="onPauseClicked($index)">
-                </i>
-                <i class="play-controls fa
-                        fa-play-circle-o"
-                    data-ng-click="onPlayClicked($event, $index)">
-                </i>
-                <!-- <i class="play-controls fa fa-cart-plus"></i> -->
             </li>
         </ul>
     </div>
