--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" rel="stylesheet">
         <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" type="text/css" rel="stylesheet">
         <link href="bower_components/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
-    </head>
+<link rel="icon" href="http://res.cloudinary.com/www-drvaudio-com/image/upload/v1472971318/drv-logo_odaevq.png">    
+</head>
     <body id="Main" data-ng-controller="MainCtrl"
         data-ng-class="model.is_mobile ? 'mobile' : 'desktop'">
         <div data-nav-bar></div>
