Added logic to handle twitter sharing and link sharing.

--- a/directive/nav-bar/nav-bar.html
+++ b/directive/nav-bar/nav-bar.html
@@ -7,7 +7,7 @@
         data-ui-state="item.state || ''"
         data-ui-sref-active="active"
         data-ng-click=""
-        data-ng-bind="::item.title">
+        data-ng-bind-html="::item.title">
     </button>
 </div>
 
