--- a/directive/rss-feed/rss-feed.html
+++ b/directive/rss-feed/rss-feed.html
@@ -12,6 +12,7 @@
         </div>
     </div>
     <hr>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="true"><img src="http://res.cloudinary.com/www-drvaudio-com/image/upload/c_scale,w_100/v1473742510/twitter_befwaa.png" alt="Share on Twitter"></a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <div class="content"
         data-ng-swipe-left="onButtonClicked('right')"
         data-ng-swipe-right="onButtonClicked('left')">
