--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
         <script src="directive/rss-feed/rss-feed.js"></script>
         <script src="directive/vertical-menu/vertical-menu.js"></script>
         <script src="directive/ng-click.js"></script>
+        <!-- Twitter -->
         <script src="directive/twitter/twitter-feed.js"></script>
+        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
         <script src="directive/soundcloud/soundcloud-new-track.js"></script>
         <script src="directive/visual-animation/wave.js"></script>
 
@@ -104,6 +107,7 @@
 
         <!-- Filters -->
         <script src="filter/trust-url.js"></script>
+        <script src="filter/encode-url.js"></script>
 
         <!-- Analytics -->
         <script src="libs/desktop-view-switch.js"></script>
