Redone the Facebook / Twitter sharing ability.

--- a/directive/rss-feed/rss-feed.html
+++ b/directive/rss-feed/rss-feed.html
@@ -12,12 +12,9 @@
         </div>
     </div>
     <hr>
-    <!--  -->
-    <a class="twitter-share-button"
-        href="https://twitter.com/intent/tweet?text=Check out this article: {{model.feed.title}}&url={{model.state | escape}}&hashtags=drvamp,drvaudio"
-        data-show-count="true">
-        <img src="http://res.cloudinary.com/www-drvaudio-com/image/upload/c_scale,w_100/v1473742510/twitter_befwaa.png" alt="Share on Twitter">
-        </a>
+
+    <!-- Social Share -->
+    <data-social-share></data-social-share>
 
     <div class="content"
         data-ng-swipe-left="onButtonClicked('right')"
