--- a/directive/social-share/social-share.html
+++ b/directive/social-share/social-share.html
@@ -10,6 +10,6 @@
     <a class="share-social-icon"
         data-ng-click="onFbClick()"
         data-ng-if="model.should_show">
-        <img src="http://res.cloudinary.com/www-drvaudio-com/image/upload/c_scale,w_50/v1473823868/fb_hhfspu.png">
+        <img src="http://res.cloudinary.com/www-drvaudio-com/image/upload/c_scale,w_50/v1473884148/fb_ehwrxe.jpg">
     </a>
 </div>
