Updated meta tags!

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <meta charset="utf-8">
         <meta name="description" content="Music Production Information by Dr.Vamp: - Musicians News - Information - Audio - Producers - Technology - World Wide - Studio Gear -
          Recommendations"/>
-        <meta name="Keywords" content="Audio Engineering, John Oprisor, romanian producer, music producer news, sling tv, dr.vamp, dktrvamp">
+        <meta name="Keywords" content="Audio Engineering, music producer news, sling tv, Dr.vamp, dktrvamp">
         <meta name="author" content="John Oprisor">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@site_username">
-        <meta name="twitter:title" content="Articles">
-        <meta name="twitter:description" content="Up than 200 characters.">
+        <meta name="twitter:title" content="Article">
+        <meta name="twitter:description" content="Check out music related articles and news.">
         <meta name="twitter:creator" content="@creator_username">
         <meta name="twitter:image" content="http://res.cloudinary.com/www-drvaudio-com/image/upload/v1472971318/drv-logo_odaevq.png">
         <meta name="twitter:domain" content="drvaudio.com">
