Updated further cleanup and rss feed improvements.

--- a/directive/overlay/loading.html
+++ b/directive/overlay/loading.html
@@ -1,4 +1,4 @@
-<div id="ContainerOverlay">
+<div data-ng-if="window.is_loading" id="ContainerOverlay">
     <div class="loading">
         <div class="sk-cube-grid">
             <div class="sk-cube sk-cube1"></div>
