--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="fb-root"></div>
         <div data-nav-bar></div>
 
-        <data-loading data-ng-if="model.is_loading"></data-loading>
+        <data-loading></data-loading>
         <div data-ui-view data-ng-if="!model.is_loading" class="fade-in fade-out {{context}}"></div>
         <!-- FOOTER -->
         <data-vertical-menu data-ng-if="!model.is_loading"></data-vertical-menu>
