Enabled HTML5 mode and updated gruntfile.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
         <!-- App LESS -->
         <link href="css/app.less" type="text/css" rel="stylesheet/less">
-        <link href="bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" rel="stylesheet">
-        <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" type="text/css" rel="stylesheet">
-        <link href="bower_components/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
+        <link href="/bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" rel="stylesheet">
+        <link href="/bower_components/bootstrap/dist/css/bootstrap-theme.css" type="text/css" rel="stylesheet">
+        <link href="/bower_components/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
         <link rel="icon" href="http://res.cloudinary.com/www-drvaudio-com/image/upload/v1472971318/drv-logo_odaevq.png">
+        <base href="/"></base>
 </head>
     <body id="Main" data-ng-controller="MainCtrl"
         data-ng-class="model.is_mobile ? 'mobile' : 'desktop'">
