--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
         <!-- App LESS -->
         <link href="css/app.less" type="text/css" rel="stylesheet/less">
-        <link href="bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" rel="stylesheet">
-        <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" type="text/css" rel="stylesheet">
+        <link href="/bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" rel="stylesheet">
+        <link href="/bower_components/bootstrap/dist/css/bootstrap-theme.css" type="text/css" rel="stylesheet">
         <link href="/bower_components/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
         <link rel="icon" href="/http://res.cloudinary.com/www-drvaudio-com/image/upload/v1472971318/drv-logo_odaevq.png">
         <base href="/"></base>
@@ -76,6 +76,8 @@
         <script src="service/rssFeed.js"></script>
         <script src="service/utils.js"></script>
 
+        <script src="factory/rss-ribbon-factory.js"></script>
+
         <!-- Directive JS -->
         <script src="directive/artist-api.js"></script>
         <script src="directive/artist-content/artist-content.js"></script>
@@ -89,6 +91,9 @@
         <script src="directive/vertical-menu/vertical-menu.js"></script>
         <script src="directive/ng-click.js"></script>
         <script src="directive/social-share/social-share.js"></script>
+        <script src="directive/vertical-ribbon/vertical-ribbon.js"></script>
+        <script src="directive/rss-ribbon/rss-ribbon.js"></script>
+        <script src="directive/rss-tile/rss-tile.js"></script>
         <!-- Twitter -->
         <script src="directive/twitter/twitter-feed.js"></script>
         <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
